syntax = "proto3";

option csharp_namespace = "ProductService.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ProductProtoService {
	rpc GetProduct(GetProductRequest) returns (ProductModel);
	rpc GetAllProducts(GetAllProductsRequest) returns (stream ProductModel);
	rpc CreateProduct(CreateProductRequest) returns (ProductModel);
	rpc UpdateProduct(UpdateProductRequest) returns (ProductModel);
	rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
	rpc InsertBulkProducts(stream ProductModel) returns (InsertBulkProductsResponse);
	rpc Test(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message GetProductRequest{
	int32 productId= 1;
}

message GetAllProductsRequest{
}

message CreateProductRequest{
	ProductModel product = 1;
}

message UpdateProductRequest{
	ProductModel product = 1;
}

message DeleteProductRequest{
	int32 productId= 1;
}
message DeleteProductResponse{
	bool success = 1;
}

message InsertBulkProductsResponse{
	bool success = 1;
	int32 insertCount = 2;
}

message ProductModel{
  int32 productId = 1;
  int32 stock = 2;
  string name = 3;
  string description = 4;
  double price = 5;
  google.protobuf.Timestamp created_time = 6;
  ProductStatus status = 7;
}

enum ProductStatus{
 IN_STOCK = 0;
 LOW_STOCK = 1;
 NONE = 2;
}